--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -132,3 +132,9 @@
 .pi-angle-double-down {
   transform: rotate(0deg);
 }
+.greyed-out {
+  /* background-color: #e0e0e0 !important; */
+  pointer-events: none;
+  opacity: 0.6;
+}
+
