--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
@@ -477,4 +477,13 @@ tr:hover {
   background-color: #e0e0e0 !important; /* Same as selected color */
   cursor: pointer;
 }
+.deleteMessage{
+  color: #000;
+  font-size: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+}
 
