--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -1325,7 +1325,8 @@
             <strong>{{'gis.quotation.risk_clauses' | translate}}</strong>
           </div>
           <div class="col-8 d-flex justify-content-end">
-            <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#riskClauses" aria-expanded="false" aria-controls="riskClauses">
+            <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#riskClauses" aria-expanded="false" aria-controls="riskClauses"
+            (click)="toggleRiskClausesOpen">
               <i class="fa-solid fa-chevron-down"></i>
             </button>
           </div>
