--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -16,7 +16,7 @@
             </button>
           </div> -->
         </div>
-        
+
       </div>
       <div  id="collapseExample">
         <!-- <div class="card card-body">
@@ -77,7 +77,7 @@
                     <option *ngFor="let vehicleModel of filteredVehicleModel" [value]="vehicleModel.code">{{ vehicleModel.name }}</option>
                   </select> -->
                 </div>
-                
+
             </div>
             <div class="row mt-2 mx-4 mb-4">
               <div class="col-4">
@@ -160,7 +160,7 @@
   <!-- schedule card -->
   <div class="card  mb-3">
     <div class="card-body">
-      
+
         <div class="row">
           <div class="col-4">
             <strong> {{'gis.quotation.schedule_details' | translate}}</strong>
@@ -179,17 +179,24 @@
               </div>
               <div class="col-4" *ngIf="isCollapsibleOpen">
                 <button type="button" id="icon" class="btn btn-danger me-2" data-bs-toggle="modal" data-bs-target="#deleteSchedule" title="Delete">
-                  
+
                   <i class="fa-solid fa-trash-can"></i>
                 </button>
               </div>
-              <div class="col-4">
-                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#scheduleDetails" [attr.aria-expanded]="!isCollapsibleOpen" (click)="toggleSchedule()">
-                  <i class="fa-solid fa-chevron-down"></i>
-                </button>
-              </div>
+                <div class="col-4">
+                  <button
+                    type="button"
+                    id="icon"
+                    class="btn btn-primary"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#sectionDetails"
+                    aria-expanded="false"
+                    [attr.aria-expanded]="isSectionDetailsOpen"
+                    (click)="toggleSchedule()">
+                    <i class="fa-solid" [ngClass]="isCollapsibleOpen ? 'fa-chevron-up' : 'fa-chevron-down'"></i>
+                  </button>
+                </div>
             </div>
-            
           </div>
         </div>
 
@@ -204,7 +211,7 @@
               </div>
 
               <div class="modal-body">
-                <h5 class="modal-title mt-2" id="editScheduleLabel">{{'gis.quotation.edit_motor_private_details' | translate}}</h5>                      
+                <h5 class="modal-title mt-2" id="editScheduleLabel">{{'gis.quotation.edit_motor_private_details' | translate}}</h5>
                 <form [formGroup]="scheduleDetailsForm">
                   <div formGroupName="details">
                       <div formGroupName="level1">
@@ -308,7 +315,7 @@
                                               <option value=""></option>
                                               <option *ngFor="let year of modelYear" [value]="year">{{ year }}</option>
                                           </select>
-                                         
+
                                       </div>
                                   </div>
                               </div>
@@ -322,7 +329,7 @@
                                           id="scheduleLabel">{{'gis.quotation.seating_capacity'
                                           | translate}}</label>
                                       <div class="col-7">
-                                          
+
                                           <input type="number"
                                               id="scheduleInput"
                                               class="form-control form-control-sm mb-1"
@@ -686,7 +693,7 @@
           </div>
         </div>
 
-       
+
         <!-- Delete Schedule Modal -->
         <div class="modal fade" id="deleteSchedule" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered ">
@@ -697,7 +704,7 @@
               </div> -->
               <div class="modal-body">
                 <p class="d-flex justify-content-center" id="deleteLabel">{{'gis.quotation.are_you_sure_you_want_to_delete_schedule' | translate}}?</p>
-                <div class="row d-flex justify-content-center">                    
+                <div class="row d-flex justify-content-center">
                   <button type="button" class="btn btn-primary " id="delete" data-bs-dismiss="modal" (click)="deleteSchedule()">{{'gis.quotation.yes_delete' | translate}}</button>
                 </div><br>
                 <div class="row d-flex justify-content-center">
@@ -775,10 +782,10 @@
                     </button>
                   </div> -->
                 </div>
-               
+
               </div>
             </div>
-            
+
           </div>
           <div class=" mt-2" id="otherDetails">
               <!-- Add Schedule-other details Modal -->
@@ -786,27 +793,27 @@
             <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
               <div class="modal-content">
                 <div class="modal-body">
-                  <h5 class="modal-title mt-2" id="editOtherDetailsLabel">{{'gis.quotation.add_other_details' | translate}}</h5> 
+                  <h5 class="modal-title mt-2" id="editOtherDetailsLabel">{{'gis.quotation.add_other_details' | translate}}</h5>
                   <form >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.code' | translate}}</label>
                     <input type="number" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.geographical_limits' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >  
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.deductible_desc' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >    
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.limitation_use' | translate}}</label>
                     <select class="form-select form-control-sm mb-1" id="scheduleInput" >
                       <option ></option>
                       <option ></option>
-                    </select>                       
+                    </select>
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.authorized_driver' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >          
-                  </form> 
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
+                  </form>
                   <div class="mt-4 d-flex justify-content-end">
                     <button type="button" class="btn btn-primary " id="saveDetails" data-bs-dismiss="modal">{{'gis.quotation.save_details' | translate}}</button>
 
-                  </div>                    
-                 
+                  </div>
+
                 </div>
               </div>
             </div>
@@ -817,27 +824,27 @@
             <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
               <div class="modal-content">
                 <div class="modal-body">
-                  <h5 class="modal-title mt-2" id="editOtherDetailsLabel">{{'gis.quotation.edit_Other_details' | translate}}</h5> 
+                  <h5 class="modal-title mt-2" id="editOtherDetailsLabel">{{'gis.quotation.edit_Other_details' | translate}}</h5>
                   <form >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.code' | translate}}</label>
                     <input type="number" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.geographical_limits' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >  
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.deductible_desc' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >    
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.limitation_use' | translate}}</label>
                     <select class="form-select form-control-sm mb-1" id="scheduleInput" >
                       <option ></option>
                       <option ></option>
-                    </select>                       
+                    </select>
                     <label for="minmax-buttons" class="col-5 col-form-label " id="scheduleLabel">{{'gis.quotation.authorized_driver' | translate}}</label>
-                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >          
-                  </form> 
+                    <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" >
+                  </form>
                   <div class="mt-4 d-flex justify-content-end">
                     <button type="button" class="btn btn-primary " id="saveDetails" data-bs-dismiss="modal">{{'gis.quotation.save_details' | translate}}</button>
 
-                  </div>                    
-                 
+                  </div>
+
                 </div>
               </div>
             </div>
@@ -852,7 +859,7 @@
                 </div> -->
                 <div class="modal-body">
                   <p class="d-flex justify-content-center" id="deleteLabel">{{'gis.policy.are_you_sure_you_want_to_delete' | translate}}</p>
-                  <div class="row d-flex justify-content-center">                    
+                  <div class="row d-flex justify-content-center">
                     <button type="button" class="btn btn-primary " id="delete" data-bs-dismiss="modal">{{'gis.quotation.yes_delete' | translate}}</button>
                   </div><br>
                   <div class="row d-flex justify-content-center">
@@ -870,8 +877,8 @@
                       <th class="flexible-header">{{'gis.quotation.geographical_limits' | translate}}</th>
                       <th class="flexible-header">{{'gis.quotation.authorized_driver' | translate}}</th>
                       <th class="flexible-header">{{'gis.quotation.deductible_description' | translate}}</th>
-  
-  
+
+
                   </tr>
               </ng-template>
               <ng-template pTemplate="body" >
@@ -881,14 +888,14 @@
                       <td class="flexible-header"></td>
                       <td class="flexible-header"></td>
                       <td class="flexible-header"></td>
-  
+
                   </tr>
               </ng-template>
               <ng-template pTemplate="emptymessage">
                 <tr>
                   <td colspan="8"  style="padding: 20px; text-align:center " id="empty">{{'gis.quotation.no_data_to_display' | translate}}</td>
                 </tr>
-  
+
                 </ng-template>
           </p-table>
           </div>
@@ -918,14 +925,14 @@
                       <i class="fa-solid fa-trash-can"></i>
                     </button>
                   </div>
-                  
+
                   <!-- <div class="col-2" >
                     <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#thirdDetails" aria-expanded="false" aria-controls="otherDetails" [attr.aria-expanded]="!isThirdDetailsOpen" (click)="toggleThirdDetails()">
                       <i class="fa-solid fa-chevron-down"></i>
                     </button>
                   </div> -->
                 </div>
-               
+
               </div>
             </div>
             <div  id="thirdDetails">
@@ -933,19 +940,19 @@
           <div class="modal fade" id="addThirdDetails" tabindex="-1" role="dialog" aria-labelledby="addOtherDetailsLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
               <div class="modal-content">
-                <div class="modal-body">          
-                 
+                <div class="modal-body">
+
                 </div>
               </div>
             </div>
           </div>
-           
+
              <!-- Edit Third details Modal -->
           <div class="modal fade" id="editThirdDetails" tabindex="-1" role="dialog" aria-labelledby="editScheduleLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
               <div class="modal-content">
                 <div class="modal-body">
-                 
+
                 </div>
               </div>
             </div>
@@ -960,7 +967,7 @@
                 </div> -->
                 <div class="modal-body">
                   <p class="d-flex justify-content-center" id="deleteLabel">{{'gis.policy.are_you_sure_you_want_to_delete' | translate}}</p>
-                  <div class="row d-flex justify-content-center">                    
+                  <div class="row d-flex justify-content-center">
                     <button type="button" class="btn btn-primary " id="delete" data-bs-dismiss="modal">{{'gis.quotation.yes_delete' | translate}}</button>
                   </div><br>
                   <div class="row d-flex justify-content-center">
@@ -970,12 +977,12 @@
               </div>
             </div>
           </div>
-         
+
           </div>
           </div>
         </div>
       </div>
-      
+
     </div>
   </div>
      <!-- Section card -->
@@ -1060,7 +1067,7 @@
           <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
               <div class="modal-body">
-                <h5 class="modal-title mt-2" id="editScheduleLabel">{{'gis.quotation.edit_risk_section_details' | translate}}</h5>                      
+                <h5 class="modal-title mt-2" id="editScheduleLabel">{{'gis.quotation.edit_risk_section_details' | translate}}</h5>
                 <form [formGroup]="sectionDetailsForm">
                     <!-- **ROW 1** -->
                     <div class="row" id="scheduleRows">
@@ -1267,7 +1274,7 @@
               </div> -->
               <div class="modal-body">
                 <p class="d-flex justify-content-center" id="deleteLabel">{{'gis.quotation.are_you_sure_you_want_to_delete_section' | translate}}?</p>
-                <div class="row d-flex justify-content-center">                    
+                <div class="row d-flex justify-content-center">
                   <button type="button" class="btn btn-primary " id="delete" data-bs-dismiss="modal">{{'gis.quotation.yes_delete' | translate}}</button>
                 </div><br>
                 <div class="row d-flex justify-content-center">
@@ -1277,7 +1284,7 @@
             </div>
           </div>
         </div>
-    
+
         <p-table [value]="sections" [tableStyle]="{'min-width': '300px'}" selectionMode="single" [(selection)]="selectedSection" dataKey="code" editMode="row">
           <ng-template pTemplate="header">
             <tr>
@@ -1326,12 +1333,12 @@
           </div>
           <div class="col-8 d-flex justify-content-end">
             <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#riskClauses" aria-expanded="false" aria-controls="riskClauses"
-            (click)="toggleRiskClausesOpen">
+            (click)="toggleClausesopen()">
               <i class="fa-solid fa-chevron-down"></i>
             </button>
           </div>
         </div>
-        
+
       </div>
       <div [@slideInOut]="isClausesOpen ? 'open' : 'closed'" class="mt-2">
 
