--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
@@ -92,6 +92,9 @@
             formControlName="bankAccount"
             (change)="onBank($event)"
           >
+            <option value="" [disabled]="">
+              {{ "fms.receipting.select" | translate }}
+            </option>
             <option *ngFor="let bank of bankAccounts" [value]="bank.code">
               {{ bank.name }}
             </option>
