--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
@@ -118,8 +118,8 @@
         </div>
         <div class="col-md-4 mb-2">
           <label for="drawersBank" class="form-label"
-            >{{ "fms.receipting.drawers_bank" | translate }}
-          </label>
+            >{{ "fms.receipting.drawers_bank" | translate }} </label
+          ><span *ngIf="makeFieldRequired" class="required"></span>
 
           <select
             id="drawersBank"
@@ -166,7 +166,8 @@
         <div class="col-md-4 mb-2">
           <label for="documentDate" class="form-label">{{
             "fms.receipting.document_date" | translate
-          }}</label>
+          }}</label
+          ><span *ngIf="requireDocumentField" class="required"></span>
           <div class="date-input">
             <input
               type="date"
@@ -206,7 +207,8 @@
         <div class="col-md-4 mb-2">
           <label for="paymentRef" class="form-label">{{
             "fms.receipting.payment_ref" | translate
-          }}</label>
+          }}</label
+          ><span *ngIf="makeFieldRequired" class="required"></span>
           <input
             type="text"
             class="form-control"
