--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -28,15 +28,22 @@
             <div class="col-4">
                 <label for="minmax-buttons" id="quote-label">{{'gis.quotation.product' | translate}}</label>
                 <select class="form-select form-control-sm " id="quote-dropdown" formControlName="productCode">
-                  <option value="">{{description}}</option>
+                  <option value="">{{description |sentenceCase}}</option>
 
               </select>
             </div>
             <div class="col-4">
                 <label for="minmax-buttons" id="quote-label">{{'gis.quotation.insured' | translate}}</label>
-                <select class="form-select form-control-sm " id="quote-dropdown" formControlName="insuredCode" >
-                  <option value="">{{clientName}}</option>
-              </select>
+                <input type="text" 
+                id="quote-input" 
+                class="form-control form-control-sm mb-1" 
+                
+                [value]="clientName" 
+                readonly>
+              
+                <!-- <select class="form-select form-control-sm " id="quote-dropdown" formControlName="insuredCode" >
+                  <option value="">{{clientName |sentenceCase}}</option>
+              </select> -->
             </div>
 
 
@@ -114,8 +121,9 @@
               <div class="col-4">
                 <label for="minmax-buttons" id="quote-label"  class="required"> {{'gis.quotation.premium_band' | translate}}</label>
                 <p-dropdown formControlName="binderCode"  [options]="binderListDetails" optionLabel="binder_name"
-                [filterBy]="'binder_name'"  [filter]="true"
+                [filterBy]="'binder_name'"  [filter]="true" [ngModel]="defaultBinderName"
                 (onChange)="onBinderSelected($event);"></p-dropdown>
+                
                 <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="binderCode" >
                     <option *ngFor="let binder of binderListDetails" [value]="binder.code">
                       {{binder.binder_name}}
@@ -132,7 +140,8 @@
               [showIcon]="true"
               (onSelect)="updateCoverToDate($event)"
               [minDate]="currentDate"
-              [placeholder]="passedCoverFromDate" >
+              
+              [ngModel]="passedCoverFromDate" >
             </p-calendar>
               <!-- <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="wef"> -->
 
@@ -145,8 +154,8 @@
               [dateFormat]="dateFormat"
               inputStyleClass='form-control'
               [showIcon]="true"
-              [placeholder]="passedCoverToDate"
               [minDate]="passedCoverToDate"
+              [ngModel]="passedCoverToDate"
               >
           </p-calendar>
               <!-- <input type="date" id="cover-to" class="form-control form-control-sm mb-1" formControlName="wet"> -->
@@ -1292,7 +1301,6 @@
             <tr>
               <th class="flexible-header">{{'gis.quotation.group' | translate}}</th>
               <th class="flexible-header"> {{'gis.quotation.row_num' | translate}}</th>
-              <th class="flexible-header">{{'gis.quotation.code' | translate}}</th>
               <th class="flexible-header"> {{'gis.quotation.short_description' | translate}}</th>
               <th class="flexible-header">{{'gis.quotation.description' | translate}}</th>
               <th class="flexible-header">{{'gis.quotation.limit_amount' | translate}}</th>
@@ -1305,7 +1313,6 @@
             <tr (click)="onSelectSection(sectionArray)" [pEditableRow]="sectionArray">
               <td class="flexible-header">{{sectionArray.calcGroup}}</td>
               <td class="flexible-header">{{sectionArray.rowNumber}}</td>
-              <td class="flexible-header">{{sectionArray.code}}</td>
               <td class="flexible-header">{{sectionArray.sectionShortDescription}}</td>
               <td class="flexible-header">{{sectionArray.description}}</td>
               <td class="flexible-header">{{sectionArray.limitAmount}}</td>
@@ -1349,10 +1356,12 @@
                 dataKey="code"
                 editMode="row"
                 [tableStyle]="{'min-width': '50rem'}"
-                styleClass="p-datatable-sm"
                 responsiveLayout="scroll"
                 class='ui-datatable'
-                [autoLayout]="true">
+                [autoLayout]="true"
+                [paginator]="selectedClauseList?.length > 5" [rows]="5"
+                [showCurrentPageReport]="selectedClauseList?.length > 5"
+                currentPageReportTemplate=" {first} - {last} of {totalRecords}">
                 <ng-template pTemplate="header">
                   <tr>
                             <th style="width: 5%;padding-right: 50px;">{{'gis.quotation.select' | translate}}</th>
