--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
@@ -257,109 +257,90 @@
 #search-input-Rsection {
     border: none;
     background-color: transparent;
-    width: 200px;
-}
-
-/* #search-input-Rsection:focus{
-    border-color: transparent;  } */
-.scrollable-list {
-    max-height: 300px;
-    /* Set the desired height for your scrollable list */
-    overflow-y: auto;
-    /* Enable vertical scrolling */
-}
-
-::ng-deep .ui-tooltip {
+    width:200px;
+  }
+  /* #search-input-Rsection:focus{
+  border-color: transparent;  } */
+  .scrollable-list {
+    max-height: 300px; /* Set the desired height for your scrollable list */
+    overflow-y: auto; /* Enable vertical scrolling */
+  }
+  ::ng-deep .ui-tooltip {
     color: white !important;
     background-color: white !important;
-}
-
-::ng-deep .p-dropdown {
+  }
+  ::ng-deep .p-dropdown{
     height: 33px;
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.20);
     border-radius: 4px;
-}
+  }
+  ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+  padding:3px;
 
-::ng-deep .p-dropdown .p-dropdown-label.p-placeholder {
-    padding: 3px;
 
+  }
 
-}
-
-::ng-deep .p-dropdown .p-dropdown-label {
+  ::ng-deep
+  .p-dropdown .p-dropdown-label {
     padding: 3px;
     font-size: 14px;
     color: #000;
-}
+  }
 
-::ng-deep .p-dropdown-filter {
+  ::ng-deep
+  .p-dropdown-filter {
     width: 100%;
     height: 30px;
     border-radius: 4px;
-}
-
-::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+  }
+  ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
     font-size: 14px;
     color: #000;
-    padding: 3px 20px;
+    padding:3px 20px;
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-}
-
-.card {
+  }
+  .card{
     border: none;
     border-radius: 5px;
 
-}
-
-.flexible-header {
+  }
+  .flexible-header {
     white-space: nowrap;
     width: auto;
     text-align: left;
-}
+  }
 
-/* .ui-datatable th, .ui-datatable td {
-                  white-space: nowrap;
-              } */
-.ui-datatable th,
-.ui-datatable td {
+  /* .ui-datatable th, .ui-datatable td {
+    white-space: nowrap;
+} */
+  .ui-datatable th,
+  .ui-datatable td {
     white-space: nowrap;
     /* color: #000; */
-}
-::ng-deep .p-calendar{
-    height: 33px !important;
-    width: 100%;
-    border-radius: 4px !important;
+  }
 
-  
+  ::ng-deep .p-calendar{
+    height: 33px;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    border-radius: 4px;
   }
-  ::ng-deep .p-calendar-w-btn .p-inputtext {
-    color: #000;
-    font-size: 14px;
+  ::ng-deep .p-calendar .p-calendar-label.p-placeholder{
+  padding:3px;
+
+
   }
+
   ::ng-deep
-  .p-datepicker table td > span {
-    width:1.5rem;
-    height: 1.5rem;
+  .p-calendar .p-calendar-label {
+    padding: 3px;
     font-size: 14px;
+    color: #000;
   }
-  ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year {
-    font-size: 14px;
-  }
-  ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month{
-    font-size: 14px;
-  }
-  ::ng-deep .p-datepicker table th > span{
-    font-size: 14px;
-  }
-  ::ng-deep .p-datatable.p-datatable-sm .p-datatable-thead > tr > th{
-    padding:8px;
-  }
-  .form-select {
-    height: 43%;
-  
-  }
+
+
