--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -139,8 +139,8 @@
               inputStyleClass='form-control'
               [showIcon]="true"
               (onSelect)="updateCoverToDate($event)"
-              [minDate]="currentDate"
-
+              [minDate]="minDate"
+              
               [ngModel]="passedCoverFromDate" >
             </p-calendar>
               <!-- <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="wef"> -->
@@ -154,7 +154,7 @@
               [dateFormat]="dateFormat"
               inputStyleClass='form-control'
               [showIcon]="true"
-              [minDate]="passedCoverToDate"
+              [minDate]="minDate"
               [ngModel]="passedCoverToDate"
               >
           </p-calendar>
@@ -1315,7 +1315,7 @@
               <td class="flexible-header">{{sectionArray.rowNumber}}</td>
               <td class="flexible-header">{{sectionArray.sectionShortDescription}}</td>
               <td class="flexible-header">{{sectionArray.description}}</td>
-              <td class="flexible-header">{{sectionArray.limitAmount}}</td>
+              <td class="flexible-header">{{sectionArray.limitAmount |number}}</td>
               <td class="flexible-header">{{sectionArray.premiumRate}}</td>
               <td class="flexible-header">{{sectionArray.rateType}}</td>
               <td class="flexible-header">
@@ -1359,6 +1359,8 @@
                 responsiveLayout="scroll"
                 class='ui-datatable'
                 [autoLayout]="true"
+                selectionMode="multiple"
+                [(selection)]="selectedRiskClause"
                 [paginator]="selectedClauseList?.length > 5" [rows]="5"
                 [showCurrentPageReport]="selectedClauseList?.length > 5"
                 currentPageReportTemplate=" {first} - {last} of {totalRecords}">
@@ -1375,6 +1377,10 @@
                     <tr (click)="onSelectRiskClauses(selectedClauseList)" [pEditableRow]="selectedClauseList">
                           <td>
                               <p-tableCheckbox [value]="selectedClauseList"></p-tableCheckbox>
+                              <!-- <p-checkbox [(ngModel)]="selectedClauseList.checked" [binary]="true"
+                              [disabled]="selectedClauseList.is_mandatory === 'Y'"
+                              >
+                          </p-checkbox> -->
                           </td>
 
                           <td
