--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -488,7 +488,7 @@
                 data-bs-target="#shareQuote" id="btnCancelQuote" *ngIf="showQuoteActions"> {{'gis.quotation.share_quote' | translate}}</button>
         </div>
         <div class="float-end mt-4 mb-4" >
-            <button *ngIf="showQuoteActions" type="button" class="btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#convertQuoteToPolicy"
+            <button *ngIf="showConverToPolicyButton && showQuoteActions" type="button" class="btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#convertQuoteToPolicy"
                 id="btnConvertPolicy" >{{'gis.quotation.convert_to_policy' | translate}}</button>
             <button *ngIf="showQuoteActions" class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#convertQuote" >
                 {{'gis.quotation.convert_to_normal_quote' | translate}}</button>
