--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
@@ -3,6 +3,6 @@
     <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
 
     <div class="container">
-      <app-new-client [shouldReroute]="false" [PassedGisClientData]="clientData"  ></app-new-client>
+      <app-new-client [shouldReroute]="false" [PassedGisClientData]="clientData" (onClickSaveClient)="handleSaveClient($event)"  ></app-new-client>
   </div>
 </div>
